<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/light_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/light_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/light_value"
        android:text="@string/light_label" />
    
    <Button 
        android:id="@+id/light_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/light_label"
        android:text="@string/light_button"/>
    
    <EditText
        android:id="@+id/shutter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/light_button"
        android:hint="@string/shutter_value_hint" />

    <TextView
        android:id="@+id/shutter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/light_button"
        android:layout_toRightOf="@id/shutter_value"
        android:text="@string/shutter_label" />

     <TextView
        android:id="@+id/aperture_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shutter_value"
        android:text="@string/aperture_label" />
    
    <EditText
        android:id="@+id/aperture_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shutter_value"
        android:layout_toRightOf="@id/aperture_label"
        android:hint="@string/aperture_value_hint" />
    
   
    
    <EditText
        android:id="@+id/sensitivity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aperture_value"
        android:hint="@string/sensitivity_value_hint" />
    
    <TextView
        android:id="@+id/sensitivity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aperture_value"
        android:layout_toRightOf="@id/sensitivity_value"
        android:text="@string/sensitivity_label" />
    
    <TextView
        android:id="@+id/result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sensitivity_value"
        android:text="@string/result_label" />
    
    <Button 
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_label"
        android:text="@string/reset_button"/>
    
    <Button 
        android:id="@+id/validate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_label"
        android:layout_toRightOf="@id/reset_button"
        android:text="@string/validate_button"/>

    

</RelativeLayout>